[package]
name = "test_rollback_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
futures = "0.3.21"

[features]
default = []
test-workaround = []

